--- a/inventario.kv
+++ b/inventario.kv
@@ -49,24 +49,35 @@ Screen:
                 nav_drawer: nav_drawer
 
 
+<MDTextField>
+    size_hint: (.1, .1)
+    mode: "rectangle"
+    font_size: 20
+    #line_color_normal: [0,0,0,1]
+    text_color_normal: 0, 0, 0, 1
+    text_color_focus: 0, 0, 0, 1
+    write_tab: False
+
 
 
 <Principal>:
 
-
-
     MDRectangleFlatButton:
-        text: 'Adicionar'
-        pos_hint: {'x':0.10, 'y':0.75}
-        on_press:
-            root.inserir()
+        size_hint: .80, .68
+        pos_hint: {'x': .1, 'y': .2}
+        text_color: (36/255,100/255,203/255,1)
+        #line_color: 1, 1, 1, 1
+        #md_bg_color: 1, 1, 1, 1
+        ripple_scale: 0
+
 
     MDSwiper:
-        id: swip
+        id: swiper
         size_hint_y: None
         height: root.height
         width: root.width
 
+        MDSwiperItem:
 
 
 
