--- a/inventario.kv
+++ b/inventario.kv
@@ -49,27 +49,41 @@ Screen:
                 nav_drawer: nav_drawer
 
 
-<MDTextField>
-    size_hint: (.1, .1)
-    mode: "rectangle"
-    font_size: 20
+#<MDTextField>
+    #size_hint: (.1, .05)
+   # mode: "rectangle"
+    #font_size: 20
     #line_color_normal: [0,0,0,1]
-    text_color_normal: 0, 0, 0, 1
-    text_color_focus: 0, 0, 0, 1
-    write_tab: False
+   # text_color_normal: 0, 0, 0, 1
+  #  text_color_focus: 0, 0, 0, 1
+   # write_tab: False
 
-
+<Image>
+    source: 'image2.jpg'
+    allow_stretch: True
+    keep_ratio: False
 
 <Principal>:
+
+    Image:
+        size_hint: (1, .915)
 
     MDRectangleFlatButton:
         size_hint: .80, .68
         pos_hint: {'x': .1, 'y': .2}
         text_color: (36/255,100/255,203/255,1)
         #line_color: 1, 1, 1, 1
-        #md_bg_color: 1, 1, 1, 1
+        md_bg_color: 1, 1, 1, 1
         ripple_scale: 0
 
+    MDRectangleFlatButton:
+        size_hint: .40, .1
+        text: 'Gravar'
+        font_size: 20
+        pos_hint: {'x': .3, 'y': .05}
+        text_color: 1, 1, 1, 1
+        line_color: 1, 1, 1, 1
+        md_bg_color: (33/255,150/255,243/255,1)
 
     MDSwiper:
         id: swiper
