--- a/inventario.kv
+++ b/inventario.kv
@@ -10,10 +10,10 @@
                     root.screen_manager.current = "principal"
 
             OneLineListItem:
-                text: "Tela 2"
+                text: "Pesquisar"
                 on_press:
                     root.nav_drawer.set_state("close")
-                    root.screen_manager.current = "tela_2"
+                    root.screen_manager.current = "pesquisar"
 
 
 Screen:
@@ -34,11 +34,13 @@ Screen:
         ScreenManager:
             id: screen_manager
 
+            TelaPesquisa:
+                name: "pesquisar"
+
             Principal:
                 name: "principal"
 
-            Tela2:
-                name: "tela_2"
+
 
 
         MDNavigationDrawer:
@@ -49,14 +51,7 @@ Screen:
                 nav_drawer: nav_drawer
 
 
-#<MDTextField>
-    #size_hint: (.1, .05)
-   # mode: "rectangle"
-    #font_size: 20
-    #line_color_normal: [0,0,0,1]
-   # text_color_normal: 0, 0, 0, 1
-  #  text_color_focus: 0, 0, 0, 1
-   # write_tab: False
+
 
 <Image>
     source: 'image2.jpg'
@@ -64,6 +59,8 @@ Screen:
     keep_ratio: False
 
 <Principal>:
+    on_enter:
+        root.inserir()
 
     Image:
         size_hint: (1, .915)
@@ -95,6 +92,69 @@ Screen:
 
 
 
+<TelaPesquisa>:
+
+    FloatLayout:
+        size_hint: (1, .915)
+
+        Image:
+
+        MDRectangleFlatButton:
+            size_hint: .80, .68
+            pos_hint: {'x': .1, 'y': .2}
+            text_color: (36/255,100/255,203/255,1)
+            #line_color: 1, 1, 1, 1
+            md_bg_color: 1, 1, 1, 1
+            ripple_scale: 0
+
+        MDTextField:
+            mode: 'rectangle'
+            hint_text: 'Nº Imobilizado'
+            pos_hint: {'x': .3, 'y': .75}
+            size_hint: .4, .1
+            write_tab: False
+
+        MDTextField:
+            id: classe
+            mode: 'rectangle'
+            hint_text: 'Classe'
+            pos_hint: {'x': .3, 'y': .6375}
+            size_hint: .4, .1
+            write_tab: False
+
+        MDTextField:
+            mode: 'rectangle'
+            hint_text: 'Nº Inventário'
+            pos_hint: {'x': .3, 'y': .525}
+            size_hint: .4, .1
+            write_tab: False
+
+        MDTextField:
+            id: data_ini
+            mode: 'rectangle'
+            hint_text: 'Data Inicial'
+            pos_hint: {'x': .2, 'y': .4}
+            size_hint: .21, .1
+            write_tab: False
+
+        MDTextField:
+            id: data_fim
+            mode: 'rectangle'
+            hint_text: 'Data Final'
+            pos_hint: {'x': .59, 'y': .4}
+            size_hint: .21, .1
+            write_tab: False
+
+        MDRectangleFlatButton:
+            size_hint: .40, .1
+            text: 'Pesquisar'
+            font_size: 20
+            pos_hint: {'x': .3, 'y': .05}
+            text_color: 1, 1, 1, 1
+            line_color: 1, 1, 1, 1
+            md_bg_color: (33/255,150/255,243/255,1)
+            on_press:
+                root.buscar()
 
 
 
