ajuste query sql

--- a/inventario.kv
+++ b/inventario.kv
@@ -116,6 +116,7 @@ Screen:
 
         MDTextField:
             id: classe
+            text: 'IES-20'
             mode: 'rectangle'
             hint_text: 'Classe'
             pos_hint: {'x': .3, 'y': .6375}
@@ -123,6 +124,7 @@ Screen:
             write_tab: False
 
         MDTextField:
+            id: num_invent
             mode: 'rectangle'
             hint_text: 'Nº Inventário'
             pos_hint: {'x': .3, 'y': .525}
@@ -131,6 +133,7 @@ Screen:
 
         MDTextField:
             id: data_ini
+            text: '01/01/2009'
             mode: 'rectangle'
             hint_text: 'Data Inicial'
             pos_hint: {'x': .2, 'y': .4}
@@ -139,6 +142,7 @@ Screen:
 
         MDTextField:
             id: data_fim
+            text: '31/12/2010'
             mode: 'rectangle'
             hint_text: 'Data Final'
             pos_hint: {'x': .59, 'y': .4}
