--- a/main.kv
+++ b/main.kv
@@ -60,7 +60,7 @@ Screen:
 
 
 <Image>
-    source: 'imagem.jpg'
+    source: 'imagem2.jpg'
     allow_stretch: True
     keep_ratio: False
 
@@ -69,7 +69,7 @@ Screen:
         root.inserir()
 
     Image:
-        size_hint: (1, .915)
+        size_hint: (1, .93)
 
     MDRectangleFlatButton:
         size_hint: .80, .68
@@ -82,7 +82,7 @@ Screen:
     MDRectangleFlatButton:
         size_hint: .40, .1
         text: 'Gravar'
-        font_size: 20
+        font_size: '20dp'
         pos_hint: {'x': .3, 'y': .05}
         text_color: 1, 1, 1, 1
         line_color: 1, 1, 1, 1
@@ -108,8 +108,8 @@ Screen:
         Image:
 
         MDRectangleFlatButton:
-            size_hint: .80, .68
-            pos_hint: {'x': .1, 'y': .2}
+            size_hint: .80, .8
+            pos_hint: {'x': .1, 'y': .15}
             text_color: (36/255,100/255,203/255,1)
             #line_color: 1, 1, 1, 1
             md_bg_color: 1, 1, 1, 1
@@ -118,15 +118,21 @@ Screen:
         MDTextField:
             id: descricao
             mode: 'rectangle'
+            line_color_focus: 0, 0, 1, 1
+            font_size: '20dp'
             hint_text: 'Descrição'
-            pos_hint: {'x': .3, 'y': .75}
+            pos_hint: {'x': .3, 'y': .82}
             size_hint: .4, .1
             write_tab: False
 
         MDTextField:
             mode: 'rectangle'
+            font_size: '20dp'
+            line_color_focus: 0, 0, 1, 1
+            fill_color: 0, 1, 0, 1
+            foreground_color: 1, 0, 1, 1
             hint_text: 'Nº Imobilizado'
-            pos_hint: {'x': .3, 'y': .6375}
+            pos_hint: {'x': .3, 'y': .7075}
             size_hint: .4, .1
             write_tab: False
 
@@ -134,16 +140,20 @@ Screen:
             id: classe
             text: 'IES-20'
             mode: 'rectangle'
+            line_color_focus: 0, 0, 1, 1
+            font_size: '20dp'
             hint_text: 'Classe'
-            pos_hint: {'x': .3, 'y': .525}
+            pos_hint: {'x': .3, 'y': .5950}
             size_hint: .4, .1
             write_tab: False
 
         MDTextField:
             id: num_invent
             mode: 'rectangle'
+            line_color_focus: 0, 0, 1, 1
+            font_size: '20dp'
             hint_text: 'Nº Inventário'
-            pos_hint: {'x': .3, 'y': .4125}
+            pos_hint: {'x': .3, 'y': .4825}
             size_hint: .4, .1
             write_tab: False
 
@@ -151,27 +161,29 @@ Screen:
             id: data_ini
             text: '01/01/2009'
             mode: 'rectangle'
+            line_color_focus: 0, 0, 1, 1
             hint_text: 'Data Inicial'
-            pos_hint: {'x': .2, 'y': .28}
-            size_hint: .21, .1
+            pos_hint: {'x': .2, 'y': .35}
+            size_hint: .24, .1
             write_tab: False
 
         MDTextField:
             id: data_fim
             text: '31/12/2010'
             mode: 'rectangle'
+            line_color_focus: 0, 0, 1, 1
             hint_text: 'Data Final'
-            pos_hint: {'x': .59, 'y': .28}
-            size_hint: .21, .1
+            pos_hint: {'x': .56, 'y': .35}
+            size_hint: .24, .1
             write_tab: False
 
         MDRectangleFlatButton:
             size_hint: .40, .1
             text: 'Pesquisar'
-            font_size: 20
-            pos_hint: {'x': .3, 'y': .05}
-            text_color: 1, 1, 1, 1
-            line_color: 1, 1, 1, 1
+            font_size: '20dp'
+            pos_hint: {'x': .3, 'y': .2}
+            text_color: 1,1,1,1
+            line_color: (33/255,150/255,243/255,1)
             md_bg_color: (33/255,150/255,243/255,1)
             on_press:
                 root.buscar()
@@ -184,7 +196,7 @@ Screen:
         Image:
 
         MDRectangleFlatButton:
-            size_hint: .80, .68
+            size_hint: .80, .75
             pos_hint: {'x': .1, 'y': .2}
             text_color: (36/255,100/255,203/255,1)
             #line_color: 1, 1, 1, 1
@@ -195,7 +207,7 @@ Screen:
             text: 'Selecione o intervalo \npara Exportação'
             font_size: 26
             halign: 'center'
-            pos_hint: {'x': .2, 'y': .7}
+            pos_hint: {'x': .2, 'y': .75}
             size_hint: .6, .1
 
         MDTextField:
@@ -203,23 +215,32 @@ Screen:
             text: '26/05/2022'
             mode: 'rectangle'
             hint_text: 'Data Inicial'
-            pos_hint: {'x': .2, 'y': .5}
-            size_hint: .21, .1
+            pos_hint: {'x': .2, 'y': .55}
+            size_hint: .24, .1
             write_tab: False
 
         MDTextField:
             id: data_mod_fim
-            text: '26/05/2022'
+            text: '03/06/2022'
             mode: 'rectangle'
             hint_text: 'Data Final'
-            pos_hint: {'x': .59, 'y': .5}
-            size_hint: .21, .1
+            pos_hint: {'x': .56, 'y': .55}
+            size_hint: .24, .1
+            write_tab: False
+
+        MDTextFieldRound:
+            id: caminho
+            mode: 'rectangle'
+            hint_text: 'Path'
+            text: '/sdcard'
+            pos_hint: {'x': .2, 'y': .4}
+            size_hint: .6, .1
             write_tab: False
 
         MDRectangleFlatButton:
             size_hint: .40, .1
             text: 'Gerar Script'
-            font_size: 20
+            font_size: '20dp'
             pos_hint: {'x': .3, 'y': .25}
             text_color: 1, 1, 1, 1
             line_color: 1, 1, 1, 1
