--- a/main.kv
+++ b/main.kv
@@ -16,10 +16,16 @@
                     root.screen_manager.current = "pesquisar"
 
             OneLineListItem:
-                text: "Enviar Dados"
+                text: "Script SAP"
                 on_press:
                     root.nav_drawer.set_state("close")
-                    root.screen_manager.current = "enviar"
+                    root.screen_manager.current = "script"
+
+            OneLineListItem:
+                text: "Relatório"
+                on_press:
+                    root.nav_drawer.set_state("close")
+                    root.screen_manager.current = "relatorio"
 
 Screen:
     name: 'tela1'
@@ -45,9 +51,11 @@ Screen:
             Principal:
                 name: "principal"
 
-            EnviarDados:
-                name: 'enviar'
+            ScriptSap:
+                name: 'script'
 
+            Relatorio:
+                name: 'relatorio'
 
         MDNavigationDrawer:
             id: nav_drawer
@@ -69,7 +77,7 @@ Screen:
         root.inserir()
 
     Image:
-        size_hint: (1, .93)
+        size_hint: (1, .915)
 
     MDRectangleFlatButton:
         size_hint: .80, .68
@@ -83,7 +91,7 @@ Screen:
         size_hint: .40, .1
         text: 'Gravar'
         font_size: '20dp'
-        pos_hint: {'x': .3, 'y': .05}
+        pos_hint: {'x': .3, 'y': .25}
         text_color: 1, 1, 1, 1
         line_color: 1, 1, 1, 1
         md_bg_color: (33/255,150/255,243/255,1)
@@ -159,7 +167,7 @@ Screen:
 
         MDTextField:
             id: data_ini
-            text: '01/01/2009'
+            text: '01/08/2010'
             mode: 'rectangle'
             line_color_focus: 0, 0, 1, 1
             hint_text: 'Data Inicial'
@@ -188,7 +196,7 @@ Screen:
             on_press:
                 root.buscar()
 
-<EnviarDados>:
+<ScriptSap>:
 
     FloatLayout:
         size_hint: (1, .915)
@@ -205,7 +213,7 @@ Screen:
 
         MDLabel:
             text: 'Selecione o intervalo \npara Exportação'
-            font_size: 26
+            font_size: '26dp'
             halign: 'center'
             pos_hint: {'x': .2, 'y': .75}
             size_hint: .6, .1
@@ -247,3 +255,40 @@ Screen:
             md_bg_color: (33/255,150/255,243/255,1)
             on_press:
                 root.gerar_script()
+
+<Relatorio>:
+
+    FloatLayout:
+        size_hint: (1, .915)
+
+        Image:
+
+        MDRectangleFlatButton:
+            size_hint: .80, .45
+            pos_hint: {'x': .1, 'y': .4}
+            text_color: (36/255,100/255,203/255,1)
+            #line_color: 1, 1, 1, 1
+            md_bg_color: 1, 1, 1, 1
+            ripple_scale: 0
+
+        MDTextField:
+            id: caminho_rel
+            text: '/sdcard'
+            mode: 'rectangle'
+            line_color_focus: 0, 0, 1, 1
+            font_size: '20dp'
+            hint_text: 'Caminho da pasta'
+            pos_hint: {'x': .3, 'y': .65}
+            size_hint: .4, .1
+            write_tab: False
+
+        MDRectangleFlatButton:
+            size_hint: (.40, .10)
+            text: 'Gerar Relatório'
+            font_size: '20dp'
+            pos_hint: {'x': .30, 'y': .45}
+            text_color: 1, 1, 1, 1
+            line_color: 1, 1, 1, 1
+            md_bg_color: (33/255,150/255,243/255,1)
+            on_press:
+                root.gerar_relatorio()
