--- a/main.kv
+++ b/main.kv
@@ -36,7 +36,7 @@
 Screen:
     name: 'tela1'
 
-    MDToolbar:
+    MDTopAppBar:
         id: toolbar
         pos_hint: {"top": 1}
         elevation: 10
@@ -263,7 +263,7 @@ Screen:
             size_hint: .24, .1
             write_tab: False
 
-        MDTextFieldRound:
+        MDTextField:
             id: caminho
             mode: 'rectangle'
             hint_text: 'Path'
