--- a/main.kv
+++ b/main.kv
@@ -192,18 +192,25 @@ Screen:
             size_hint: .4, .1
             write_tab: False
 
-        MDRectangleFlatButton:
+        MDTextField:
             id: data_ini
-            text: 'Intervalo Datas'
-            font_size: '20dp'
-            pos_hint: {'x': .35, 'y': .35}
-            size_hint: .3, .08
-            text_color: (33/255,150/255,243/255,1)
-            line_color: (33/255,150/255,243/255,1)
-            md_bg_color: 1,1,1,1
-            on_press:
-                root.show_date_picker()
+            text: '01/08/2010'
+            mode: 'rectangle'
+            line_color_focus: 0, 0, 1, 1
+            hint_text: 'Data Inicial'
+            pos_hint: {'x': .15, 'y': .35}
+            size_hint: .32, .1
+            write_tab: False
 
+        MDTextField:
+            id: data_fim
+            text: '31/12/2010'
+            mode: 'rectangle'
+            line_color_focus: 0, 0, 1, 1
+            hint_text: 'Data Final'
+            pos_hint: {'x': .52, 'y': .35}
+            size_hint: .32, .1
+            write_tab: False
 
         MDRectangleFlatButton:
             size_hint: .40, .1
